# spotkin_server

./: .gitignore  CHANGELOG.md  Procfile  README.md  data_service.py  dump.md  dump.py  job_service.py  pyproject.toml  refresh_jobs.py  requirements.txt  routes.py  server.py  setup.py  test.json  test.txt  wsgi.py
migrations/versions/: 23e927725060_.py  2442e512086f_bannedgenres_to_json.py  31a890d73e36_jobastupdated.py  50d8a29226f9_initial_migration.py  5719cea2ec73_.py  6c2364441efe_oauth2.py  7cf34caf4ac7_.py  899c7561de33_bannedalbums.py  89d8930983bf_.py  bacb3ee53ad2_.py  c279366b46bb_.py  db044f98bd81_lastautorun.py  ec8a44998f55_add_banexplicitlyrics_and_remove_.py  f8f8480d1c2f_initial_migration3.py
server/: CHANGELOG.md  README.md
server/database/: database.py
server/src/: migrations.py  server.py
server/src/models/: __init__.py  models.py
spotkin/: __main__.py  build_artist_genres.py
spotkin/data/: _example_jobs.py
spotkin/scripts/: api.py  bans.py  get_all_tracks.py  post_description.py  process_job.py  utils.py
spotkin_tools/: __main__.py  build_artist_genres.py
spotkin_tools/data/: _default_add_list.csv
spotkin_tools/scripts/: api.py  bans.py  get_all_tracks.py  post_description.py  process_job.py  utils.py
spotnik/: __main__.py  api.py  bans.py  config.py  copy_sheet.py  extract_id.py  get_all_tracks.py  newmusicdescription.py  post_description.py  update_cover.py  utils.py
spotnik/data/: _default_add_list.csv  _example_jobs.py  randomfacts.txt
spotnik/scripts/: api.py  bans.py  get_all_tracks.py  post_description.py  utils.py
(+6 files in other folders)
