[tool.poetry]
name = "spotnik"
version = "0.1.0"
description = "A python package that updates one or more of your Spotify playlists every day with a random selection of songs from any public playlists."
authors = ["Rivers Cuomo"]
license = "GNU GENERAL PUBLIC LICENSE"

[tool.poetry.dependencies]
python = "^3.9"
spotipy = "^2.21.0"
python-decouple = "3.6"
python_dateutil = "2.8.2"
python-dotenv = "0.21.0"
rich = ">=12.6.0"
gspreader = "^0.1.20"
gspread = "^5.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
